tests/single_instruction_translation_validation/mcsema/memory-variants/cmpxchgl_m32_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:186:30: error: use of undefined value '@__remill_compare_exchange_memory_32'
  %12 = call %struct.Memory* @__remill_compare_exchange_memory_32(%struct.Memory* %0, i64 %2, i32* nonnull dereferenceable(4) %6, i32 %7) #24
                             ^
0.01user 0.01system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 27172maxresident)k
0inputs+16outputs (0major+3225minor)pagefaults 0swaps
